# opengl-template

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  run.sh  shell.nix
.github/workflows/: ci.yaml
app/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
cmake/: git.cmake
data/shader/: cube.frag  cube.vert  fragment.frag
ext/: CMakeLists.txt
ext/glad/: glad.c  glad.h  khrplatform.h
src/: CMakeLists.txt  common.hpp  stb_def.h
src/glad/: glad.c  glad.h  khrplatform.h
src/glaze/: buffers.hpp  files.cpp  files.hpp  shader.cpp  shader.hpp  shapes.cpp  shapes.hpp  textures.cpp  textures.hpp  time.hpp
src/utils/: buffers.hpp  files.cpp  files.hpp  shader.cpp  shader.hpp  shapes.cpp  shapes.hpp  time.hpp
